erDiagram
  CLIENTES ||--o{ OPORTUNIDADES : solicita
  EMPRESAS ||--o{ OPORTUNIDADES : asociada_a
  USUARIOS ||--o{ OPORTUNIDADES : lleva
  USUARIOS ||--o{ TAREAS : asignada_a
  USUARIOS ||--o{ HISTORIAL_ESTADOS : registra
  OPORTUNIDADES ||--o{ TAREAS : tiene
  OPORTUNIDADES ||--o{ NOTAS : tiene
  OPORTUNIDADES ||--o{ HISTORIAL_ESTADOS : registra

  CLIENTES {
    uuid id PK
    string tipo_cliente
    string nombre
    string empresa
    string email
    string telefono
  }
  USUARIOS {
    uuid id PK
    string nombre
    string email
    string rol
  }
  EMPRESAS {
    uuid id PK
    string nombre
    string cif
    string sector
    string ciudad
    string email
    string telefono
  }
  OPORTUNIDADES {
    uuid id PK
    uuid cliente_id FK
    uuid comercial_id FK
    uuid empresa_id FK
    string tipo_evento
    string tipo_evento_otro
    date fecha_evento
    int num_invitados
    numeric presupuesto_estimado
    string mensaje
    string estado
    string origen
  }
  TAREAS {
    uuid id PK
    uuid oportunidad_id FK
    uuid usuario_id FK
    string titulo
    date fecha_limite
    boolean completada
  }
  NOTAS {
    uuid id PK
    uuid oportunidad_id FK
    string contenido
    timestamp created_at
  }
  HISTORIAL_ESTADOS {
    uuid id PK
    uuid oportunidad_id FK
    uuid usuario_id FK
    string estado_anterior
    string estado_nuevo
    timestamp changed_at
  }
